[package]
name = "slint-webview2"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Slint-friendly WebView2 integration helpers (legacy/experimental)."

[features]
# No default features: this crate stays out of builds unless explicitly enabled.
default = []
# Builds the Slint-oriented wrapper that can drive WebView2.
slint = []
# Builds the offscreen DirectComposition renderer prototype.
renderer = ["dep:wgpu", "dep:webview2-com"]

[dependencies]
anyhow = "1.0"
base64 = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slint = { version = "=1.14.1", default-features = false, features = ["raw-window-handle-06", "compat-1-2"] }
tracing = "0.1"
parking_lot = "0.12"

# Only needed when the relevant features are enabled.
webview2-com = { version = "0.33", optional = true }
wgpu = { version = "0.20", optional = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_DirectComposition",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common"
] }
windows-core = { version = "0.58" }
